--- a/app/views/usermailer_mailer/forgot_password_link_send.html.erb
+++ b/app/views/usermailer_mailer/forgot_password_link_send.html.erb
@@ -6,9 +6,9 @@
    
    <body>
       <h1>Hi <%= @user.name %> !!!</h1>
-      
       <p>
-         Your password reset link is <a href="http://localhost:3001/user/forgot_password">Click this link to reset your password</a>
+   Your password reset link is<a href="<%= "http://localhost:8000/user/change_password/#{@user.reset_password_token}"%>">Click this link to reset your password
+         </a>
       </p>
 
       <a href=""></a>
